force-app/main/default/objects/Cart__c/fields/CartId__c.field-meta.xml
<CustomField>
    <fullName>CartId__c</fullName>
    <label>Cart Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>