force-app/main/default/objects/Cart__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The total quantity related to this cart record.</description>
    <label>Total Quantity</label>
    <summarizedField>CartItem__c.Quantity__c</summarizedField>
    <summaryForeignKey>CartItem__c.Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>