force-app/main/default/objects/Cart__c/validationRules/Make_Customer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Customer_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Customer__c )</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>This field has to be filled.</errorMessage>
</ValidationRule>