force-app/main/default/objects/Cart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Customer__c</columns>
    <columns>CartId__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>